// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusDropDown should render correctly and match snapshot 1`] = `
<v-popover-stub
  class="text-xs"
  placement="bottom-end"
  popover-class="status-dropdown"
>
  <div
    class="badge-holder rounded-lg px-2"
    style="color: rgb(208, 2, 27); background-color: rgba(208, 2, 27, 0.239);"
  >
    <!---->
     
    <div>
      status.open_unassigned
    </div>
     
    <font-awesome-icon-stub
      class="mx-1"
      icon="chevron-down"
      size="sm"
    />
  </div>
   
  <div
    class="bg-white border outline-none h-84 w-56 overflow-auto"
  >
    <div
      class="cursor-pointer py-1 hover:bg-crisiscleanup-light-grey selected"
      value="open_unassigned"
    >
      <div
        class="badge-holder text-xs"
      >
        <badge-stub
          class="mx-1"
          color="#fab92e"
        />
         
        <div>
          status.open_unassigned
        </div>
      </div>
    </div>
    <div
      class="cursor-pointer py-1 hover:bg-crisiscleanup-light-grey"
      value="open_assigned"
    >
      <div
        class="badge-holder text-xs"
      >
        <badge-stub
          class="mx-1"
          color="#f0f032"
        />
         
        <div>
          status.open_assigned
        </div>
      </div>
    </div>
  </div>
</v-popover-stub>
`;

exports[`StatusDropDown should render correctly and match snapshot when using icons 1`] = `
<v-popover-stub
  class="text-xs"
  placement="bottom-end"
  popover-class="status-dropdown"
>
  <div
    class="badge-holder rounded-lg px-2"
    style="color: rgb(208, 2, 27); background-color: rgba(208, 2, 27, 0.239);"
  >
    <div
      class="case-svg-container mr-1"
    />
     
    <div>
      status.open_unassigned
    </div>
     
    <font-awesome-icon-stub
      class="mx-1"
      icon="chevron-down"
      size="sm"
    />
  </div>
   
  <div
    class="bg-white border outline-none h-84 w-56 overflow-auto"
  >
    <div
      class="cursor-pointer py-1 hover:bg-crisiscleanup-light-grey selected"
      value="open_unassigned"
    >
      <div
        class="badge-holder text-xs"
      >
        <badge-stub
          class="mx-1"
          color="#fab92e"
        />
         
        <div>
          status.open_unassigned
        </div>
      </div>
    </div>
    <div
      class="cursor-pointer py-1 hover:bg-crisiscleanup-light-grey"
      value="open_assigned"
    >
      <div
        class="badge-holder text-xs"
      >
        <badge-stub
          class="mx-1"
          color="#f0f032"
        />
         
        <div>
          status.open_assigned
        </div>
      </div>
    </div>
  </div>
</v-popover-stub>
`;
